<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/nama_item_predict"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <!-- Matched Ingredients -->
        <TextView
            android:id="@+id/itemMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matched_ingredients"
            android:textSize="14sp"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" />

        <!-- Unmatched Ingredients -->
        <TextView
            android:id="@+id/itemUnmatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/unmatched_ingredients"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
